fix: 适配屏幕高度

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,7 +3,8 @@
     "designResolution": {
       "width": 844,
       "height": 440,
-      "fitWidth": false
+      "fitWidth": false,
+      "fitHeight": true
     }
   },
   "physics": {
